2010-12-10 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKPort.m: Fix crash in -isEqual: when the receiver is
	being compared with a NSPort subclass other than DKPort
	(reported by Philippe Roussel).

2010-10-26 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKMethodCall.m
	* Tests/TestDKArgument.m:
	Fix memory leaks in the test suite.

2010-10-19 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKPort.m: Implement automatic invalidation of ports
	when the remote disappears from the bus. Applications should
	watch for NSPortDidBecomeInvalidNotification to catch this
	situation.

2010-09-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Add -isEqual: and -hash implementations
	to DKEndpoint. Improve thread-safety of DKRunLoopContext.
	* Source/DKPort.m: Add -isEqual: and -hash implementations.
	Remove -_proxyAtPath:, which is superfluous with recent
	changes to the DKProxy API.
	* Source/DKProxy.m
	* Source/DKProxy+Private.h:
	Add accessor method for the port and check proxy scopes by means
	of port equality.
	* Source/NSConnection+DBus.m: Remove use of -[DKPort
	_proxyAthPath:].
	* Tests/TestDKProxy.m: Improve logging for failure in threaded
	test.

	Follow-up changes for DKProxy API change, based on suggestions
	by Fred Kiefer.

2010-09-19 Niels Grewe <niels.grewe@halbordnung.de>

	* ChangLog: Adjust formating.
	* Tools/dk_make_protocol.m: Point to the correct license file.

2010-09-19 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.h
	* Source/DKProxy.m:
	Adjust to use DKPort.
	* Source/DKArgument.m
	* Source/DKNotificationCenter.m
	* Source/DKObjectPathNode.m
	* Source/DKPort.m:
	Fixup for changes in DKProxy.

	Make DKProxy use a DKPort instead of a DKEndpoint/service name
	pair. This is the level of abstraction that will be used by
	DKPortNameServer to handle connection invalidation etc.
	Note: This breaks binary compatibility for DKPort subclasses
	with the fragile ABI.
